[metadata]
name = decisiontree
version = 0.0.1
author = "Antoine CLOUTE, Annabelle LUO, Ali NAJEM, Xioayan HONG, Karim EL HAGE"
author_email = antoine.cloute@student-cs.fr
description = Decision Tree for Classification and Regression
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/karimelhage/ensemble-decision-tree.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT


[options]
packages = find:
python_requires = >=3.7
install_requires = numpy
include_package_data = False
